Users can see single reviews

--- a/views/reviews-index.hbs
+++ b/views/reviews-index.hbs
@@ -5,7 +5,16 @@
 <a href="/reviews/new">New Review</a>
 
 {{#each reviews}}
-  <h2>{{this.title}}</h2>
-  <small>{{this.movieTitle}}</small><br>
-  <small>{{this.description}}</small>
+    <h2><a href="/reviews/{{this._id}}">{{this.title}}</a></h2>
+    <small>{{this.movieTitle}}</small><br>
+    <small>{{this.description}}</small><br>
+    <p>
+        <select >
+            <option value="0">0</option>
+            <option value="1">1</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+            <option value="4">4</option>
+        </select>
+    </p>
 {{/each}}
