Added vanilla boostrap

--- a/views/partials/reviews-form.hbs
+++ b/views/partials/reviews-form.hbs
@@ -3,25 +3,25 @@
 <fieldset>
   <legend>Edit Review</legend>
   <!-- TITLE -->
-  <p>
+  <div class="form-group">
     <label for="review-title">Title</label><br>
-    <input id="review-title" type="text" name="title" value="{{review.title}}"/>
-  </p>
+    <input class="form-control" id="review-title" type="text" name="title" value="{{review.title}}"/>
+</div>
 
   <!-- MOVIE TITLE -->
-  <p>
+  <div class="form-group">
     <label for="movie-title">Movie Title</label><br>
-    <input id="movie-title" type="text" name="movieTitle" value="{{review.movieTitle}}" />
-  </p>
+    <input class="form-control" id="movie-title" type="text" name="movieTitle" value="{{review.movieTitle}}" />
+  </div>
 
   <!-- DESCRIPTION -->
-  <p>
+  <div class="form-group">
     <label for="review-description">Description</label><br>
-    <textarea id="review-description" name="description" rows="10" />{{review.description}}</textarea>
-  </p>
+    <textarea class="form-control" id="review-description" name="description" rows="10" />{{review.description}}</textarea>
+  </div>
 
   <!-- RATING -->
-  <p>
+  <div>
       <select >
           <option value="0">0</option>
           <option value="1">1</option>
@@ -29,6 +29,6 @@
           <option value="3">3</option>
           <option value="4">4</option>
       </select>
-  </p>
-  
+  </div>
+
 </fieldset>
