--- a/views/reviews-edit.hbs
+++ b/views/reviews-edit.hbs
@@ -1,10 +1,14 @@
 <!-- views/reviews-edit.hbs -->
 
-<form method="POST" action="/reviews/{{review._id}}?_method=PUT">
-    {{> reviews-form}}
-    <!-- BUTTON -->
-    <p>
-        <button type="submit">Save Review</button>
-        <input type="button" value="Go back!" onclick="history.back()">
-    </p>
-</form>
+<div class="row">
+    <div class="col-sm-6 col-sm-offset-3">
+        <form method="POST" action="/reviews/{{review._id}}?_method=PUT">
+            {{> reviews-form}}
+            <!-- BUTTON -->
+            <p>
+                <button type="submit">Save Review</button>
+                <input class="btn btn-primary" type="button" value="Go back!" onclick="history.back()">
+            </p>
+        </form>
+    </div>
+</div>
