--- a/views/reviews-index.hbs
+++ b/views/reviews-index.hbs
@@ -2,10 +2,13 @@
 
 <h1>Reviews</h1>
 
-<a href="/reviews/new">New Review</a>
-
-{{#each reviews}}
-    <h2><a href="/reviews/{{this._id}}">{{this.title}}</a></h2>
-    <small>{{this.movieTitle}}</small><br>
-    <small>{{this.description}}</small><br>
-{{/each}}
+<!-- <a href="/reviews/new">New Review</a> -->
+<div class="row">
+    {{#each reviews}}
+        <div class="col-sm-3">
+            <h2><a href="/reviews/{{this._id}}">{{this.title}}</a></h2>
+            <small>{{this.movieTitle}}</small><br>
+            <small>{{this.description}}</small><br>
+        </div>
+    {{/each}}
+</div>
