--- a/views/reviews-new.hbs
+++ b/views/reviews-new.hbs
@@ -1,10 +1,14 @@
 <!-- /views/reviews-new.hbs -->
 
-<form method="POST" action="/reviews">
-    {{> reviews-form}}
-    <!-- BTTUON -->
-    <p>
-        <button type="submit">Save Review</button>
-        <input type="button" value="Go back!" onclick="history.back()">
-    </p>
-</form>
+<div class="row">
+    <div class="col-sm-6 col-sm-offset-3">
+        <form method="POST" action="/reviews">
+            {{> reviews-form}}
+            <!-- BTTUON -->
+            <p>
+                <button type="submit">Save Review</button>
+                <input type="button" value="Go back!" onclick="history.back()">
+            </p>
+        </form>
+    </div>
+</div>
