--- a/views/reviews-show.hbs
+++ b/views/reviews-show.hbs
@@ -14,5 +14,10 @@
                 <button class="btn btn-primary" type="submit">Delete</button>
             </form>
         </p>
+
+        <hr>
+
+        <!-- Commetn form -->
+        {{> comment-form}}
     </div>
 </div>
